aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jgt__tests__jgt_lit_expr.snap
---
source: aya-assembly/src/parser/instructions/jgt.rs
expression: result
---
Instruction(
    JgtLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        BinaryOp {
            lhs: HexLiteral(
                ByteOffset {
                    start: 16,
                    end: 20,
                },
            ),
            operator: Add,
            rhs: Register(
                ByteOffset {
                    start: 23,
                    end: 25,
                },
            ),
        },
    ),
)
