aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jgt__tests__jgt_lit_var.snap
---
source: aya-assembly/src/parser/instructions/jgt.rs
expression: result
---
Instruction(
    JgtLit(
        Address(
            HexLiteral(
                ByteOffset {
                    start: 7,
                    end: 11,
                },
            ),
        ),
        Var(
            ByteOffset {
                start: 15,
                end: 18,
            },
        ),
    ),
)
