aya-assembly/src/parser/instructions/snapshots/aya_assembly__parser__instructions__jgt__tests__jgt_reg.snap
---
source: aya-assembly/src/parser/instructions/jgt.rs
expression: result
---
Instruction(
    JgtReg(
        Address(
            ByteOffset {
                start: 7,
                end: 11,
            },
        ),
        Register(
            ByteOffset {
                start: 14,
                end: 16,
            },
        ),
    ),
)
